--- a/views/zone/base.html
+++ b/views/zone/base.html
@@ -14,6 +14,7 @@
     <link type="text/css" rel="stylesheet" href="{{zone_static}}/css/common.css">
     {% block css %}{% endblock %}
     <script type="text/javascript" src="{{common_static}}/js/jquery-1.12.4.min.js"></script>
+    <script src="https://hm.baidu.com/hm.js?28e25e5f559e7668da4f08ff44758192"></script>
 </head>
 <body>
 {% block body %}
