--- a/views/zone/modelOne.html
+++ b/views/zone/modelOne.html
@@ -1,4 +1,41 @@
-
+<style>
+	.modelOne .img{min-width:1200px;}
+	.modelOne{height:680px;background:rgba(0,0,0,.5);overflow:hidden;}
+	.modelOne nav{left:22%;top:120px;z-index:12;}
+	.modelOne nav li{float:left;width:30px;text-align:center;border:1px solid #fff;box-shadow:0 0 8px rgba(255,255,255,.6);cursor:pointer;transition: all .3s;}
+	.modelOne nav li a{color:#fff;float:left;height:100%;}
+	.modelOne nav li:nth-child(1){height:180px;padding-top:100px;background:rgba(237,87,163,.9);margin-top:20px;}
+	.modelOne nav li:nth-child(2){height:120px;padding-top:80px;background:rgba(119,201,216,.9);margin-top:60px;}
+	.modelOne nav li:nth-child(3){height:160px;padding-top:80px;background:rgba(252,181,87,.9);margin-top:40px;}
+	.modelOne nav li:nth-child(4){height:200px;padding-top:120px;background:rgba(237,87,163,.9);}
+	.modelOne nav li:nth-child(5){height:120px;padding-top:30px;background:rgba(119,201,216,.9);margin-top:90px;}
+	.modelOne nav li:nth-child(1):hover{height:240px;padding-top:140px;margin-top:-20px;}
+	.modelOne nav li:nth-child(2):hover{height:200px;padding-top:160px;margin-top:-20px;}
+	.modelOne nav li:nth-child(3):hover{height:240px;padding-top:160px;margin-top:-40px;}
+	.modelOne nav li:nth-child(4):hover{height:260px;padding-top:160px;margin-top:-40px;}
+	.modelOne nav li:nth-child(5):hover{height:180px;padding-top:100px;margin-top:20px;}
+	.magic{top:120px;left:46%;width:400px;height:400px;z-index:11;transform: rotate(45deg);}
+	.magic li{float:left;width:120px;height:120px;margin:5px;overflow:hidden;box-shadow:1px 1px 6px rgba(0,0,0,.3);}
+	.magic li span{display:block;width:170px;height:170px;line-height:170px;text-align:center;margin:-25px;transform: rotate(-45deg);position:relative;}
+	.magic li span:before{display:block;width:100%;height:100%;position:absolute;top:-170px;color:#fff;background:rgba(0,0,0,.5);transition: top .5s;}
+	.magic li:nth-child(1) span:before{content:"此時";}
+	.magic li:nth-child(2) span:before{content:"此刻";}
+	.magic li:nth-child(3) span:before{content:"用尽力氣";}
+	.magic li:nth-child(6) span:before{content:"感受";}
+	.magic li:nth-child(9) span:before{content:"每一次";}
+	.magic li:nth-child(8) span:before{content:"成功";}
+	.magic li:nth-child(7) span:before{content:"带来的";}
+	.magic li:nth-child(4) span:before{content:"喜悦";}
+	.magic li span:hover:before{top:0;}
+	.magic li:nth-child(1){margin-left:10px;margin-top:10px;background:#EB59A4;}
+	.magic li:nth-child(2){margin-top:10px;background:#FCB657;}
+	.magic li:nth-child(3){margin-top:10px;background:#78CAD8;}
+	.magic li:nth-child(4){margin-left:10px;background:#78CAD8;}
+	.magic li:nth-child(5){background:#EB59A4;color:#fff;font-size:20px;}
+	.magic li:nth-child(6){background:#FCB657;}
+	.magic li:nth-child(7){margin-left:10px;background:#FCB657;}
+	.modelOne .talk{width:260px;left:74%;top:80px;color:#fff;}
+</style>
 <div class="modelOne rel">
 	<p class="cover"><img class="img" width="100%" src="{{zone_static}}/images/bg.jpg"/></p>
 	<nav class="abs">
