--- a/views/wechat/gift.html
+++ b/views/wechat/gift.html
@@ -87,13 +87,14 @@
         <p>小猪醒来后就可以陪你玩了哦~</p>
         <p>告诉你一个小秘密</p>
         <p>摸摸小猪的舌头有惊喜哦~</p>
+        <p>或者摸摸眼睛看看~~</p>
     </div>
 
     <div class="talk hide">
         <p>哈哈哈</p>
         <p>现在可以和我说话了哦~</p>
-        <p>虽然我还很弱智</p>
-        <p>不过你要笑哦</p>
+        <p>虽然我还很笨</p>
+        <p>不过你要开心哦</p>
     </div>
 
     <div id="start" class="talkBtn hide"></div>
